--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "e-commerce",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
@@ -9,13 +10,26 @@
   "keywords": [],
   "author": "EbrahimSalah",
   "license": "ISC",
-  "description": "",
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.15.0",
+    "mongoose": "^8.15.1",
+    "morgan": "^1.10.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ESalah489/e-commerce-back-end.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ESalah489/e-commerce-back-end/issues"
+  },
+  "homepage": "https://github.com/ESalah489/e-commerce-back-end#readme",
+  "description": "",
+  "devDependencies": {
     "nodemon": "^3.1.10"
   }
 }
